src/assets/stylesheets/components/banner/right-banner.css
/* layout design starts*/

.right-banner {
  width: 100%;
  height: 100%;
}

.wrapper {
  margin: 40px 40px 0px 0px;
  height: 65%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

/*layout design ends*/

/*size design starts*/

.size-circles {
  display: flex;
  justify-content: space-between;
  width: 100%;
  margin-top: 20px;
}

.circle {
  background-color: transparent;
  padding: 15px;
  border-radius: 50%;
  border: 1px solid black;
  text-decoration: none;
  color: black;
  font-size: 16px;
  outline: 0;
  cursor: pointer;
}

.circle.selected {
  background-color: black;
  color: white;
}

.circle.na {
  border-color: rgb(180, 180, 180);
  color: rgb(180, 180, 180);
}

/*size design ends*/

/*reviews design starts*/

.reviews-wrapper {
  display: flex;
  justify-content: space-between;
  color: rgb(160, 160, 160);
}

.star-icons {
  width: 120px;
  display: flex;
  justify-content: space-between;
  color: rgb(160, 160, 160);
}

/*reviews design ends*/

/* price design starts*/

.price-wrapper {
  display: flex;
  justify-content: space-between;
}

.price {
  color: rgb(160, 160, 160);
}

/*price design ends*/

/*colours design starts*/

/*colours set1*/

.colour-wrapper-set1 {
  /*  display: none;
*/
}

.color-btn {
  cursor: pointer;
}

.colour-btns-set1 {
  width: 30%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: 20px;
}

.btn-color.black {
  padding: 15px;
  border-radius: 50%;
  background-color: black;
  outline: 0;
}

.btn-color.white {
  padding: 15px;
  border-radius: 50%;
  border: 1px solid grey;
  background-color: white;
  outline: 0;
}

.btn-color.black.active {
  border-style: solid;
  border-width: 6px;
  border-color: rgb(220, 220, 220);
}

/*.active {
  border-style: solid;
  border-width: 6px;
  border-color: rgb(220, 220, 220);
}*/

.btn-color.white.active {
  border: 2px solid black;
  box-shadow: 0 0 0 4px black inset;
}

/*colours set2*/

.colour-wrapper-set2 {
  display: none;
}

.colour-btns-set2 {
  width: 40%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: 20px;
}

.color-btn.red {
  padding: 15px;
  border-radius: 50%;
  border: 1px solid grey;
  background-color: red;
  outline: 0;
}

.color-btn.white-brown {
  padding: 15px;
  border-radius: 50%;
  border: 1px solid grey;
  background: linear-gradient(
    -45deg,
    #8f521d,
    #8f521d 49%,
    grey 49%,
    grey 51%,
    white 51%
  );
  outline: 0;
}

.color-btn.black-brown {
  padding: 15px;
  border-radius: 50%;
  border: 1px solid grey;
  background: linear-gradient(
    -45deg,
    #8f521d,
    #8f521d 49%,
    white 49%,
    white 51%,
    black 51%
  );
  outline: 0;
}

.color-btn.red.active {
  border-style: solid;
  border-width: 6px;
  border-color: rgb(220, 220, 220);
}

.color-btn.white-brown.active {
  border-style: solid;
  border-width: 6px;
  border-color: rgb(220, 220, 220);
}

.color-btn.black-brown.active {
  border-style: solid;
  border-width: 6px;
  border-color: rgb(220, 220, 220);
}
/*colours design ends*/

